[tool.poetry]
name = "LunarAPI"
version = "0.1.0"
description = ""
authors = ["Jocadbz <madureirajoaquim95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
